--- a/app/templates/admin/settings/index.html
+++ b/app/templates/admin/settings/index.html
@@ -12,7 +12,7 @@
     </li>
     <li class="nav-item" role="presentation">
       <button class="nav-link" id="tab-retention" data-bs-toggle="tab" data-bs-target="#pane-retention" type="button"
-        role="tab">Retención (sensible)</button>
+        role="tab">Retención de Archivos</button>
     </li>
   </ul>
 
