--- a/app/templates/auth_base.html
+++ b/app/templates/auth_base.html
@@ -60,7 +60,7 @@
   <div class="siiapec-welcome-banner">
     <div class="banner-content">
       <p class="banner-text mb-0">
-        Bienvenido al Sistema Integral de Información Académica de Posgrado
+        Bienvenido al Sistema Integral de Información para la Adminitración de Posgrado
       </p>
     </div>
   </div>
