--- a/app/templates/auth_base.html
+++ b/app/templates/auth_base.html
@@ -42,7 +42,7 @@
 
         <!-- SIIAP centrado -->
         <div class="brand-container">
-          <span class="brand-text">SIIAAAAAP</span>
+          <span class="brand-text">SIIAAAAAPPPPPPPP</span>
         </div>
 
         <!-- Logos derecha -->
